--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 <body>
     <div class="login-container">
         <h2>Login</h2>
-        <form id="login-form">
+        <form id="login-form" action="process-login.php" method="post">
             <div class="form-group">
                 <label for="loginEmail">Email</label>
                 <input type="email" id="loginEmail" name="email" required>
@@ -26,6 +26,6 @@
             </div>
         </form>
     </div>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
 </body>
 </html>
