--- a/registration.html
+++ b/registration.html
@@ -12,7 +12,7 @@
 <body>
     <div class="registration-container">
         <h2>Registration</h2>
-        <form id="registration-form">
+        <form id="registration-form" action="process-signup.php" method="post" novalidate>
             <div class="form-group">
                 <label for="firstName">First Name</label>
                 <input type="text" id="firstName" name="firstName" required>
@@ -29,11 +29,17 @@
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
             </div>
+
             <div class="form-group">
-                <button type="button"  id="register-button">Register</button>
+                <label for="password_confirmation">Repeat Password</label>
+                <input type="password" id="password_confirmation" name="password_confirmation" required>
+            </div>
+
+            <div class="form-group">
+                <input type="submit" value="Submit">
             </div>
         </form>
     </div>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
 </body>
 </html>
