--- a/confirmation.html
+++ b/confirmation.html
@@ -16,11 +16,12 @@
     <nav class="navigation">
         <ul>
             <li><a href="Home.html">Home</a></li>
-            <li><a href="profile.html">Profile</a></li>
+            <li><a href="profile.php">Profile</a></li>
             <li><a href="recipe-search.html">Recipe Search</a></li>
+            <li><a href="buy-book.php">Buy Recipe Book</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="terms.html">Terms and Services</a></li>
-            <li><a href="Index.html">Log out</a></li>
+            <li><a href="Index.html">Logout</a></li>
         </ul>
     </nav>
 
