--- a/registration.html
+++ b/registration.html
@@ -12,34 +12,39 @@
 <body>
     <div class="registration-container">
         <h2>Registration</h2>
-        <form id="registration-form" action="process-signup.php" method="post" novalidate>
+        <form id="registration-form" action="process-signup.php" method="post">
             <div class="form-group">
                 <label for="firstName">First Name</label>
-                <input type="text" id="firstName" name="firstName" required>
+                <input type="text" id="firstName" name="firstName">
+                <div class="error"></div>
             </div>
             <div class="form-group">
                 <label for="lastName">Last Name</label>
-                <input type="text" id="lastName" name="lastName" required>
+                <input type="text" id="lastName" name="lastName">
+                <div class="error"></div>
             </div>
             <div class="form-group">
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email">
+                <div class="error"></div>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password">
+                <div class="error"></div>
             </div>
 
             <div class="form-group">
                 <label for="password_confirmation">Repeat Password</label>
-                <input type="password" id="password_confirmation" name="password_confirmation" required>
+                <input type="password" id="password_confirmation" name="password_confirmation">
+                <div class="error"></div>
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Submit">
+                <input type="submit" value="Submit" id="register-button">
             </div>
         </form>
     </div>
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
 </body>
 </html>
