--- a/Home.html
+++ b/Home.html
@@ -1,3 +1,11 @@
+<?php
+session_start();
+if (!isset($_SESSION['user_id'])) {
+    header('Location: login.php'); // Redirect to the login page if the user is not logged in
+    exit;
+}
+?>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,15 +20,17 @@
 <body>
     <header>
         <h1>Lazeez</h1>
+        <?php include 'logout.php'; ?>
     </header>
     <nav class="navigation">
         <ul>
             <li><a href="Home.html">Home</a></li>
-            <li><a href="profile.html">Profile</a></li>
+            <li><a href="profile.php">Profile</a></li>
             <li><a href="recipe-search.html">Recipe Search</a></li>
+            <li><a href="buy-book.php">Buy Recipe Book</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="terms.html">Terms and Services</a></li>
-            <li><a href="Index.html">Log out</a></li>
+            <li><a href="Index.html">Logout</a></li>
         </ul>
     </nav>
     
