--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to the Recipe Sharing Platform</h1>
+        <h1>Welcome to the Recipe E-commerce Platform</h1>
         <p>Discover and Share Delicious Recipes</p>
     </header>
     <main>
@@ -21,7 +21,7 @@
             <div class="cta-buttons">
                 <a href="registration.html">Register</a>
                 <span>or</span>
-                <a href="login.html">Log In</a>
+                <a href="login.php">Log In</a>
             </div>
         </div>
     </main>
