--- a/contact.html
+++ b/contact.html
@@ -16,36 +16,23 @@
     <nav class="navigation">
         <ul>
             <li><a href="Home.html">Home</a></li>
-            <li><a href="profile.html">Profile</a></li>
+            <li><a href="profile.php">Profile</a></li>
             <li><a href="recipe-search.html">Recipe Search</a></li>
-            <li><a href="add-recipe.html">Add Recipe</a></li>
+            <li><a href="buy-book.php">Buy Recipe Book</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="terms.html">Terms and Services</a></li>
-            <li><a href="Index.html">Log out</a></li>
+            <li><a href="Index.html">Logout</a></li>
         </ul>
     </nav>
 
     <section class="main-content">
         <h2>Contact Us</h2>
-        <p>If you have any questions or feedback, feel free to contact us using the form below:</p>
+        <p>If you have any questions or feedback, feel free to contact us using the information below:</p>
+        <br>
+        <p>Developer's email: meloomak@gmail.com</p>
 
-        <form id="contact-form">
-            <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="message">Message</label>
-                <textarea id="message" name="message" required></textarea>
-            </div>
-            <div class="form-group">
-                <button type="submit" id="submit-button">Submit</button>
-            </div>
-        </form>
+        <br>
+        <p>Developer's phone number: 7038625049</p>
     </section>
 
     <script src="script.js"></script>
