--- a/signup-failed.html
+++ b/signup-failed.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Signup</h1>
 
-    <p>Signup successful. 
-        You can now <a href="login.php">log in</a>
+    <p>Duplicate email found. 
+        Go back and <a href="registration.html">register</a> or <a href="login.php">login </a>
     </p>
 
 </body>
